[tmux] setup for remote machines

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,3 +39,5 @@ set -g bell-action none
 
 # right status pane: indicate when prefix is pressed
 set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:pane_title}" %H:%M %d-%b-%y'
+
+set -g default-command "env HOME=$HOME/loctx bash -l"
